# iexec

./: .clangd  .gitignore  AGENTS.md  LICENSE  Makefile.am  README.md  configure.ac
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
docs/: backlog.md  ci.md  docker.md  install.md  pidns-validation.md  privilege.md  release.md
src/: Makefile.am  iexec.c  iexec_main.c  iexec_main.h  iexec_option.c  iexec_option.h  iexec_pidns.c  iexec_pidns.h  iexec_print.c  iexec_print.h  iexec_privilege.c  iexec_privilege.h  iexec_process.c  iexec_process.h  iexec_wait.c  iexec_wait.h
tests/: docker-entrypoint.sh  iexec-behavior.sh  install-policy.sh  pidns-validation.sh
